# dukamarket

./: .gitignore  asynchronous.txt  main.py  notes.txt  pyproject.toml  requirements.txt
account/: admin.py  api_urls.py  api_views.py  authentication.py  backends.py  email_or_phone.txt  forms.py  mixing.py  models.py  serializers.py  tasks.py  urls.py  views.py
account/migrations/: 0001_initial.py
config/: __init__.py  settings.py  urls.py
env312/: pyvenv.cfg
env312/Scripts/: activate  activate.bat
static/assets/css/: bootstrap.css  ratings.css  style.css
static/assets/js/: ajax-form.js  backtotop.js  main.js
store/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py
templates/: alert.html  base.html
templates/account/: login.html  signup.html
templates/store/: home.html  product-detail.html
